// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AgentAwardsPanel characterization (FR-5b commit 1) > (a) settlements only, no ledger 1`] = `
{
  "cards": {
    "advisor_month_api": "Advisor of the Month — APIRecognition + Gift60%60%TTD 20,000 to goTTD 30,000 of TTD 50,000",
    "advisor_month_apps": "Advisor of the Month — AppsRecognition + GiftIN PROGRESS13%13 to go2 of 15",
    "agent_of_year": "Agent of the YearAgent of the Year Trophy + Grand PrizeIN PROGRESS15%TTD 846,000 to goTTD 154,000 of TTD 1,000,000",
    "bronze_club_l1": "Bronze Club — Level 1Bronze Club Level 1 + TripIN PROGRESS28%TTD 296,000 to goTTD 154,000 of TTD 450,000",
    "bronze_club_l2": "Bronze Club — Level 2Bronze Club Membership + BonusIN PROGRESS34%TTD 196,000 to goTTD 154,000 of TTD 350,000",
    "bronze_club_l3": "Bronze Club — Level 3Bronze Club MembershipIN PROGRESS44%TTD 96,000 to goTTD 154,000 of TTD 250,000",
    "centurion": "Centurion AwardCenturion TrophyIN PROGRESS9%91 to go9 of 100",
    "gold_club": "Gold ClubGold Club + Luxury TripIN PROGRESS24%TTD 496,000 to goTTD 154,000 of TTD 650,000",
    "mdrt": "MDRTMDRT Membership + RecognitionIN PROGRESS22%TTD 534,800 to goTTD 154,000 of TTD 688,800",
    "persistency_gold": "Persistency Award — GoldGold Trophy + Premium Bonus62%62%TTD 96,000 to goTTD 154,000 of TTD 250,000",
    "persistency_silver": "Persistency Award — SilverSilver Trophy + BonusIN PROGRESS62%TTD 96,000 to goTTD 154,000 of TTD 250,000",
    "quarterly_api": "Quarterly API AwardQuarterly BonusQUALIFIED100%EarnedTTD 135,000 of TTD 125,000",
    "quarterly_apps": "Quarterly Apps AwardQuarterly BonusIN PROGRESS20%36 to go9 of 45",
    "silver_club": "Silver ClubSilver Club + Premium TripIN PROGRESS24%TTD 396,000 to goTTD 154,000 of TTD 550,000",
  },
  "drawers": {
    "advisor_month_api": " Close★ In contention60%Advisor of the Month — APIRecognition + GiftCriteriaMonthly API60%TTD 30,000TTD 50,000Persistency100%91.0%90.0%Your paceYou're TTD 20,000 from qualifying. At your avg pace of TTD 15,000/wk, you'll qualify in ~2 wks (around Tue, 29 Sept 2026).",
    "advisor_month_apps": " Close★ In contention13%Advisor of the Month — AppsRecognition + GiftCriteriaMonthly Apps13%215Persistency100%91.0%90.0%Your paceYou're 13 apps from qualifying. At your avg pace of 1 apps/wk, you'll qualify in ~13 wks (around Tue, 15 Dec 2026).",
    "agent_of_year": " Close★ In contention15%Agent of the YearAgent of the Year Trophy + Grand PrizeCriteriaAnnual API15%TTD 154,000TTD 1,000,000Annual Apps18%950Avg Persistency100%90.3%90.0%Your paceYou're TTD 846,000 from qualifying. At your avg pace of TTD 4,277.78/wk, you'll qualify in 20+ wks (around Tue, 2 Jul 2030).Estimated — pending Tatil Life confirmation",
    "bronze_club_l1": " Close★ In contention28%Bronze Club — Level 1Bronze Club Level 1 + TripCriteriaAnnual API ($450K–$549K)34%TTD 154,000TTD 450,000Annual Apps18%950Avg Persistency100%90.3%90.0%Your paceYou're TTD 296,000 from qualifying. At your avg pace of TTD 4,277.78/wk, you'll qualify in 20+ wks (around Tue, 18 Jan 2028).Estimated — pending Tatil Life confirmation",
    "bronze_club_l2": " Close★ In contention34%Bronze Club — Level 2Bronze Club Membership + BonusCriteriaAnnual API ($350K–$449K)44%TTD 154,000TTD 350,000Annual Apps18%950Avg Persistency100%90.3%90.0%Your paceYou're TTD 196,000 from qualifying. At your avg pace of TTD 4,277.78/wk, you'll qualify in 20+ wks (around Tue, 3 Aug 2027).Estimated — pending Tatil Life confirmation",
    "bronze_club_l3": " Close★ In contention44%Bronze Club — Level 3Bronze Club MembershipCriteriaAnnual API ($250K–$349K)62%TTD 154,000TTD 250,000Annual Apps18%950Avg Persistency100%90.3%90.0%Your paceYou're TTD 96,000 from qualifying. At your avg pace of TTD 4,277.78/wk, you'll qualify in 20+ wks (around Tue, 23 Feb 2027).Estimated — pending Tatil Life confirmation",
    "centurion": " Close★ In contention9%Centurion AwardCenturion TrophyCriteriaAnnual Apps9%9100Avg Persistency100%90.3%90.0%Your paceYou're 91 apps from qualifying. At your avg pace of 0 apps/wk, you'll qualify in 20+ wks (around Tue, 6 Sept 2033).Estimated — pending Tatil Life confirmation",
    "gold_club": " Close★ In contention24%Gold ClubGold Club + Luxury TripCriteriaAnnual API (≥$650K)24%TTD 154,000TTD 650,000Annual Apps18%950Avg Persistency100%90.3%90.0%Your paceYou're TTD 496,000 from qualifying. At your avg pace of TTD 4,277.78/wk, you'll qualify in 20+ wks (around Tue, 5 Dec 2028).Estimated — pending Tatil Life confirmation",
    "mdrt": " Close★ In contention22%MDRTMDRT Membership + RecognitionCriteriaAnnual API22%TTD 154,000TTD 688,800Your paceYou're TTD 534,800 from qualifying. At your avg pace of TTD 4,277.78/wk, you'll qualify in 20+ wks (around Tue, 13 Feb 2029).Estimated — pending Tatil Life confirmation",
    "persistency_gold": " Close★ In contention62%Persistency Award — GoldGold Trophy + Premium BonusCriteriaAnnual API62%TTD 154,000TTD 250,000Annual Apps20%945Avg Persistency95%90.3%95.0%Your paceYou're TTD 96,000 from qualifying. At your avg pace of TTD 4,277.78/wk, you'll qualify in 20+ wks (around Tue, 23 Feb 2027).Estimated — pending Tatil Life confirmation",
    "persistency_silver": " Close★ In contention62%Persistency Award — SilverSilver Trophy + BonusCriteriaAnnual API62%TTD 154,000TTD 250,000Annual Apps20%945Avg Persistency98%90.3%92.0%Your paceYou're TTD 96,000 from qualifying. At your avg pace of TTD 4,277.78/wk, you'll qualify in 20+ wks (around Tue, 23 Feb 2027).Estimated — pending Tatil Life confirmation",
    "quarterly_api": " Close✓ Qualified100%Quarterly API AwardQuarterly BonusCriteriaQuarterly Net API100%TTD 135,000TTD 125,000Persistency100%90.3%90.0%",
    "quarterly_apps": " Close★ In contention20%Quarterly Apps AwardQuarterly BonusCriteriaQuarterly Apps20%945Persistency100%90.3%90.0%Your paceYou're 36 apps from qualifying. At your avg pace of 1 apps/wk, you'll qualify in 20+ wks (around Tue, 22 Jun 2027).",
    "silver_club": " Close★ In contention24%Silver ClubSilver Club + Premium TripCriteriaAnnual API ($550K–$649K)28%TTD 154,000TTD 550,000Annual Apps18%950Avg Persistency100%90.3%90.0%Your paceYou're TTD 396,000 from qualifying. At your avg pace of TTD 4,277.78/wk, you'll qualify in 20+ wks (around Tue, 27 Jun 2028).Estimated — pending Tatil Life confirmation",
  },
  "groups": {
    "↗ Making progress · 30–70%": [
      "advisor_month_api",
      "persistency_gold",
      "persistency_silver",
      "bronze_club_l3",
      "bronze_club_l2",
    ],
    "◯ Just starting · under 30%": [
      "advisor_month_apps",
      "quarterly_apps",
      "centurion",
      "bronze_club_l1",
      "silver_club",
      "gold_club",
      "agent_of_year",
      "mdrt",
    ],
    "✓ Qualified": [
      "quarterly_api",
    ],
  },
  "hero": "62%★ Almost therePersistency Award — GoldGold Trophy + Premium BonusGapTTD 96,000to qualify20+ wks at your current pace · avg TTD 4,277.78/wk",
  "ledgerPartial": null,
  "tracked": "14 awards tracked",
  "yearSettled": null,
}
`;

exports[`AgentAwardsPanel characterization (FR-5b commit 1) > (b) ledger only: not flagged, has policies, no settlements 1`] = `
{
  "cards": {
    "advisor_month_api": "Advisor of the Month — APIRecognition + GiftIN PROGRESS100%TTD 0 to goTTD 52,000 of TTD 50,000",
    "advisor_month_apps": "Advisor of the Month — AppsRecognition + GiftIN PROGRESS7%14 to go1 of 15",
    "agent_of_year": "Agent of the YearAgent of the Year Trophy + Grand PrizeIN PROGRESS15%TTD 847,500 to goTTD 152,500 of TTD 1,000,000",
    "bronze_club_l1": "Bronze Club — Level 1Bronze Club Level 1 + TripIN PROGRESS28%TTD 297,500 to goTTD 152,500 of TTD 450,000",
    "bronze_club_l2": "Bronze Club — Level 2Bronze Club Membership + BonusIN PROGRESS34%TTD 197,500 to goTTD 152,500 of TTD 350,000",
    "bronze_club_l3": "Bronze Club — Level 3Bronze Club MembershipIN PROGRESS44%TTD 97,500 to goTTD 152,500 of TTD 250,000",
    "centurion": "Centurion AwardCenturion TrophyIN PROGRESS4%96 to go4 of 100",
    "gold_club": "Gold ClubGold Club + Luxury TripIN PROGRESS23%TTD 497,500 to goTTD 152,500 of TTD 650,000",
    "mdrt": "MDRTMDRT Membership + RecognitionIN PROGRESS24%TTD 524,300 to goTTD 164,500 of TTD 688,800",
    "persistency_gold": "Persistency Award — GoldGold Trophy + Premium BonusIN PROGRESS61%TTD 97,500 to goTTD 152,500 of TTD 250,000",
    "persistency_silver": "Persistency Award — SilverSilver Trophy + BonusIN PROGRESS61%TTD 97,500 to goTTD 152,500 of TTD 250,000",
    "quarterly_api": "Quarterly API AwardQuarterly BonusIN PROGRESS100%TTD 0 to goTTD 133,500 of TTD 125,000",
    "quarterly_apps": "Quarterly Apps AwardQuarterly BonusIN PROGRESS9%41 to go4 of 45",
    "silver_club": "Silver ClubSilver Club + Premium TripIN PROGRESS23%TTD 397,500 to goTTD 152,500 of TTD 550,000",
  },
  "drawers": {
    "advisor_month_api": " Close★ In contention100%Advisor of the Month — APIRecognition + GiftCriteriaMonthly API100%TTD 52,000TTD 50,000Persistency0%0.0%90.0%Your paceNo pace data yet — check back after your next submission.",
    "advisor_month_apps": " Close★ In contention7%Advisor of the Month — AppsRecognition + GiftCriteriaMonthly Apps7%115Persistency0%0.0%90.0%Your paceYou're 14 apps from qualifying. At your avg pace of 1 apps/wk, you'll qualify in 20+ wks (around Tue, 30 Mar 2027).",
    "agent_of_year": " Close★ In contention15%Agent of the YearAgent of the Year Trophy + Grand PrizeCriteriaAnnual API15%TTD 152,500TTD 1,000,000Annual Apps8%450Avg Persistency0%0.0%90.0%Your paceYou're TTD 847,500 from qualifying. At your avg pace of TTD 4,236.11/wk, you'll qualify in 20+ wks (around Tue, 23 Jul 2030).Estimated — pending Tatil Life confirmation",
    "bronze_club_l1": " Close★ In contention28%Bronze Club — Level 1Bronze Club Level 1 + TripCriteriaAnnual API ($450K–$549K)34%TTD 152,500TTD 450,000Annual Apps8%450Avg Persistency0%0.0%90.0%Your paceYou're TTD 297,500 from qualifying. At your avg pace of TTD 4,236.11/wk, you'll qualify in 20+ wks (around Tue, 25 Jan 2028).Estimated — pending Tatil Life confirmation",
    "bronze_club_l2": " Close★ In contention34%Bronze Club — Level 2Bronze Club Membership + BonusCriteriaAnnual API ($350K–$449K)44%TTD 152,500TTD 350,000Annual Apps8%450Avg Persistency0%0.0%90.0%Your paceYou're TTD 197,500 from qualifying. At your avg pace of TTD 4,236.11/wk, you'll qualify in 20+ wks (around Tue, 10 Aug 2027).Estimated — pending Tatil Life confirmation",
    "bronze_club_l3": " Close★ In contention44%Bronze Club — Level 3Bronze Club MembershipCriteriaAnnual API ($250K–$349K)61%TTD 152,500TTD 250,000Annual Apps8%450Avg Persistency0%0.0%90.0%Your paceYou're TTD 97,500 from qualifying. At your avg pace of TTD 4,236.11/wk, you'll qualify in 20+ wks (around Tue, 2 Mar 2027).Estimated — pending Tatil Life confirmation",
    "centurion": " Close★ In contention4%Centurion AwardCenturion TrophyCriteriaAnnual Apps4%4100Avg Persistency0%0.0%90.0%Your paceYou're 96 apps from qualifying. At your avg pace of 0 apps/wk, you'll qualify in 20+ wks (around Tue, 7 Apr 2043).Estimated — pending Tatil Life confirmation",
    "gold_club": " Close★ In contention23%Gold ClubGold Club + Luxury TripCriteriaAnnual API (≥$650K)23%TTD 152,500TTD 650,000Annual Apps8%450Avg Persistency0%0.0%90.0%Your paceYou're TTD 497,500 from qualifying. At your avg pace of TTD 4,236.11/wk, you'll qualify in 20+ wks (around Tue, 19 Dec 2028).Estimated — pending Tatil Life confirmation",
    "mdrt": " Close★ In contention24%MDRTMDRT Membership + RecognitionCriteriaAnnual API24%TTD 164,500TTD 688,800Your paceYou're TTD 524,300 from qualifying. At your avg pace of TTD 4,569.44/wk, you'll qualify in 20+ wks (around Tue, 28 Nov 2028).Estimated — pending Tatil Life confirmation",
    "persistency_gold": " Close★ In contention61%Persistency Award — GoldGold Trophy + Premium BonusCriteriaAnnual API61%TTD 152,500TTD 250,000Annual Apps9%445Avg Persistency0%0.0%95.0%Your paceYou're TTD 97,500 from qualifying. At your avg pace of TTD 4,236.11/wk, you'll qualify in 20+ wks (around Tue, 2 Mar 2027).Estimated — pending Tatil Life confirmation",
    "persistency_silver": " Close★ In contention61%Persistency Award — SilverSilver Trophy + BonusCriteriaAnnual API61%TTD 152,500TTD 250,000Annual Apps9%445Avg Persistency0%0.0%92.0%Your paceYou're TTD 97,500 from qualifying. At your avg pace of TTD 4,236.11/wk, you'll qualify in 20+ wks (around Tue, 2 Mar 2027).Estimated — pending Tatil Life confirmation",
    "quarterly_api": " Close★ In contention100%Quarterly API AwardQuarterly BonusCriteriaQuarterly Net API100%TTD 133,500TTD 125,000Persistency0%0.0%90.0%Your paceNo pace data yet — check back after your next submission.",
    "quarterly_apps": " Close★ In contention9%Quarterly Apps AwardQuarterly BonusCriteriaQuarterly Apps9%445Persistency0%0.0%90.0%Your paceYou're 41 apps from qualifying. At your avg pace of 0 apps/wk, you'll qualify in 20+ wks (around Tue, 5 Sept 2028).",
    "silver_club": " Close★ In contention23%Silver ClubSilver Club + Premium TripCriteriaAnnual API ($550K–$649K)28%TTD 152,500TTD 550,000Annual Apps8%450Avg Persistency0%0.0%90.0%Your paceYou're TTD 397,500 from qualifying. At your avg pace of TTD 4,236.11/wk, you'll qualify in 20+ wks (around Tue, 4 Jul 2028).Estimated — pending Tatil Life confirmation",
  },
  "groups": {
    "↗ Making progress · 30–70%": [
      "advisor_month_api",
      "quarterly_api",
      "persistency_silver",
      "persistency_gold",
      "bronze_club_l3",
      "bronze_club_l2",
    ],
    "◯ Just starting · under 30%": [
      "advisor_month_apps",
      "quarterly_apps",
      "centurion",
      "bronze_club_l1",
      "silver_club",
      "gold_club",
      "agent_of_year",
      "mdrt",
    ],
  },
  "hero": null,
  "ledgerPartial": null,
  "tracked": "14 awards tracked",
  "yearSettled": "Settled 2026: TTD 145,500 · 0 from head office · 5 self-confirmed",
}
`;

exports[`AgentAwardsPanel characterization (FR-5b commit 1) > (c) ledger + settlements with persistency for some periods (merged by periodKey) 1`] = `
{
  "cards": {
    "advisor_month_api": "Advisor of the Month — APIRecognition + GiftIN PROGRESS100%TTD 0 to goTTD 52,000 of TTD 50,000",
    "advisor_month_apps": "Advisor of the Month — AppsRecognition + GiftIN PROGRESS7%14 to go1 of 15",
    "agent_of_year": "Agent of the YearAgent of the Year Trophy + Grand PrizeIN PROGRESS15%TTD 847,500 to goTTD 152,500 of TTD 1,000,000",
    "bronze_club_l1": "Bronze Club — Level 1Bronze Club Level 1 + TripIN PROGRESS28%TTD 297,500 to goTTD 152,500 of TTD 450,000",
    "bronze_club_l2": "Bronze Club — Level 2Bronze Club Membership + BonusIN PROGRESS34%TTD 197,500 to goTTD 152,500 of TTD 350,000",
    "bronze_club_l3": "Bronze Club — Level 3Bronze Club MembershipIN PROGRESS44%TTD 97,500 to goTTD 152,500 of TTD 250,000",
    "centurion": "Centurion AwardCenturion TrophyIN PROGRESS4%96 to go4 of 100",
    "gold_club": "Gold ClubGold Club + Luxury TripIN PROGRESS23%TTD 497,500 to goTTD 152,500 of TTD 650,000",
    "mdrt": "MDRTMDRT Membership + RecognitionIN PROGRESS24%TTD 524,300 to goTTD 164,500 of TTD 688,800",
    "persistency_gold": "Persistency Award — GoldGold Trophy + Premium Bonus61%61%TTD 97,500 to goTTD 152,500 of TTD 250,000",
    "persistency_silver": "Persistency Award — SilverSilver Trophy + BonusIN PROGRESS61%TTD 97,500 to goTTD 152,500 of TTD 250,000",
    "quarterly_api": "Quarterly API AwardQuarterly BonusQUALIFIED100%EarnedTTD 133,500 of TTD 125,000",
    "quarterly_apps": "Quarterly Apps AwardQuarterly BonusIN PROGRESS9%41 to go4 of 45",
    "silver_club": "Silver ClubSilver Club + Premium TripIN PROGRESS23%TTD 397,500 to goTTD 152,500 of TTD 550,000",
  },
  "drawers": {
    "advisor_month_api": " Close★ In contention100%Advisor of the Month — APIRecognition + GiftCriteriaMonthly API100%TTD 52,000TTD 50,000Persistency99%89.0%90.0%Your paceNo pace data yet — check back after your next submission.",
    "advisor_month_apps": " Close★ In contention7%Advisor of the Month — AppsRecognition + GiftCriteriaMonthly Apps7%115Persistency99%89.0%90.0%Your paceYou're 14 apps from qualifying. At your avg pace of 1 apps/wk, you'll qualify in 20+ wks (around Tue, 30 Mar 2027).",
    "agent_of_year": " Close★ In contention15%Agent of the YearAgent of the Year Trophy + Grand PrizeCriteriaAnnual API15%TTD 152,500TTD 1,000,000Annual Apps8%450Avg Persistency100%91.0%90.0%Your paceYou're TTD 847,500 from qualifying. At your avg pace of TTD 4,236.11/wk, you'll qualify in 20+ wks (around Tue, 23 Jul 2030).Estimated — pending Tatil Life confirmation",
    "bronze_club_l1": " Close★ In contention28%Bronze Club — Level 1Bronze Club Level 1 + TripCriteriaAnnual API ($450K–$549K)34%TTD 152,500TTD 450,000Annual Apps8%450Avg Persistency100%91.0%90.0%Your paceYou're TTD 297,500 from qualifying. At your avg pace of TTD 4,236.11/wk, you'll qualify in 20+ wks (around Tue, 25 Jan 2028).Estimated — pending Tatil Life confirmation",
    "bronze_club_l2": " Close★ In contention34%Bronze Club — Level 2Bronze Club Membership + BonusCriteriaAnnual API ($350K–$449K)44%TTD 152,500TTD 350,000Annual Apps8%450Avg Persistency100%91.0%90.0%Your paceYou're TTD 197,500 from qualifying. At your avg pace of TTD 4,236.11/wk, you'll qualify in 20+ wks (around Tue, 10 Aug 2027).Estimated — pending Tatil Life confirmation",
    "bronze_club_l3": " Close★ In contention44%Bronze Club — Level 3Bronze Club MembershipCriteriaAnnual API ($250K–$349K)61%TTD 152,500TTD 250,000Annual Apps8%450Avg Persistency100%91.0%90.0%Your paceYou're TTD 97,500 from qualifying. At your avg pace of TTD 4,236.11/wk, you'll qualify in 20+ wks (around Tue, 2 Mar 2027).Estimated — pending Tatil Life confirmation",
    "centurion": " Close★ In contention4%Centurion AwardCenturion TrophyCriteriaAnnual Apps4%4100Avg Persistency100%91.0%90.0%Your paceYou're 96 apps from qualifying. At your avg pace of 0 apps/wk, you'll qualify in 20+ wks (around Tue, 7 Apr 2043).Estimated — pending Tatil Life confirmation",
    "gold_club": " Close★ In contention23%Gold ClubGold Club + Luxury TripCriteriaAnnual API (≥$650K)23%TTD 152,500TTD 650,000Annual Apps8%450Avg Persistency100%91.0%90.0%Your paceYou're TTD 497,500 from qualifying. At your avg pace of TTD 4,236.11/wk, you'll qualify in 20+ wks (around Tue, 19 Dec 2028).Estimated — pending Tatil Life confirmation",
    "mdrt": " Close★ In contention24%MDRTMDRT Membership + RecognitionCriteriaAnnual API24%TTD 164,500TTD 688,800Your paceYou're TTD 524,300 from qualifying. At your avg pace of TTD 4,569.44/wk, you'll qualify in 20+ wks (around Tue, 28 Nov 2028).Estimated — pending Tatil Life confirmation",
    "persistency_gold": " Close★ In contention61%Persistency Award — GoldGold Trophy + Premium BonusCriteriaAnnual API61%TTD 152,500TTD 250,000Annual Apps9%445Avg Persistency96%91.0%95.0%Your paceYou're TTD 97,500 from qualifying. At your avg pace of TTD 4,236.11/wk, you'll qualify in 20+ wks (around Tue, 2 Mar 2027).Estimated — pending Tatil Life confirmation",
    "persistency_silver": " Close★ In contention61%Persistency Award — SilverSilver Trophy + BonusCriteriaAnnual API61%TTD 152,500TTD 250,000Annual Apps9%445Avg Persistency99%91.0%92.0%Your paceYou're TTD 97,500 from qualifying. At your avg pace of TTD 4,236.11/wk, you'll qualify in 20+ wks (around Tue, 2 Mar 2027).Estimated — pending Tatil Life confirmation",
    "quarterly_api": " Close✓ Qualified100%Quarterly API AwardQuarterly BonusCriteriaQuarterly Net API100%TTD 133,500TTD 125,000Persistency100%91.0%90.0%",
    "quarterly_apps": " Close★ In contention9%Quarterly Apps AwardQuarterly BonusCriteriaQuarterly Apps9%445Persistency100%91.0%90.0%Your paceYou're 41 apps from qualifying. At your avg pace of 0 apps/wk, you'll qualify in 20+ wks (around Tue, 5 Sept 2028).",
    "silver_club": " Close★ In contention23%Silver ClubSilver Club + Premium TripCriteriaAnnual API ($550K–$649K)28%TTD 152,500TTD 550,000Annual Apps8%450Avg Persistency100%91.0%90.0%Your paceYou're TTD 397,500 from qualifying. At your avg pace of TTD 4,236.11/wk, you'll qualify in 20+ wks (around Tue, 4 Jul 2028).Estimated — pending Tatil Life confirmation",
  },
  "groups": {
    "↗ Making progress · 30–70%": [
      "persistency_gold",
      "advisor_month_api",
      "persistency_silver",
      "bronze_club_l3",
      "bronze_club_l2",
    ],
    "◯ Just starting · under 30%": [
      "advisor_month_apps",
      "quarterly_apps",
      "centurion",
      "bronze_club_l1",
      "silver_club",
      "gold_club",
      "agent_of_year",
      "mdrt",
    ],
    "✓ Qualified": [
      "quarterly_api",
    ],
  },
  "hero": "61%★ Almost therePersistency Award — GoldGold Trophy + Premium BonusGapTTD 97,500to qualify20+ wks at your current pace · avg TTD 4,236.11/wk",
  "ledgerPartial": null,
  "tracked": "14 awards tracked",
  "yearSettled": "Settled 2026: TTD 145,500 · 0 from head office · 5 self-confirmed",
}
`;

exports[`AgentAwardsPanel characterization (FR-5b commit 1) > (d) flagged usesPolicyLedger with an empty ledger 1`] = `
{
  "cards": {
    "advisor_month_api": "Advisor of the Month — APIRecognition + GiftIN PROGRESS35%TTD 32,500 to goTTD 17,500 of TTD 50,000",
    "advisor_month_apps": "Advisor of the Month — AppsRecognition + GiftNOT STARTED0%15 to go0 of 15",
    "agent_of_year": "Agent of the YearAgent of the Year Trophy + Grand PrizeIN PROGRESS7%TTD 928,500 to goTTD 71,500 of TTD 1,000,000",
    "bronze_club_l1": "Bronze Club — Level 1Bronze Club Level 1 + TripIN PROGRESS13%TTD 378,500 to goTTD 71,500 of TTD 450,000",
    "bronze_club_l2": "Bronze Club — Level 2Bronze Club Membership + BonusIN PROGRESS16%TTD 278,500 to goTTD 71,500 of TTD 350,000",
    "bronze_club_l3": "Bronze Club — Level 3Bronze Club MembershipIN PROGRESS20%TTD 178,500 to goTTD 71,500 of TTD 250,000",
    "centurion": "Centurion AwardCenturion TrophyNOT STARTED0%100 to go0 of 100",
    "gold_club": "Gold ClubGold Club + Luxury TripIN PROGRESS11%TTD 578,500 to goTTD 71,500 of TTD 650,000",
    "mdrt": "MDRTMDRT Membership + RecognitionIN PROGRESS10%TTD 617,300 to goTTD 71,500 of TTD 688,800",
    "persistency_gold": "Persistency Award — GoldGold Trophy + Premium BonusIN PROGRESS29%TTD 178,500 to goTTD 71,500 of TTD 250,000",
    "persistency_silver": "Persistency Award — SilverSilver Trophy + BonusIN PROGRESS29%TTD 178,500 to goTTD 71,500 of TTD 250,000",
    "quarterly_api": "Quarterly API AwardQuarterly BonusIN PROGRESS42%TTD 72,500 to goTTD 52,500 of TTD 125,000",
    "quarterly_apps": "Quarterly Apps AwardQuarterly BonusNOT STARTED0%45 to go0 of 45",
    "silver_club": "Silver ClubSilver Club + Premium TripIN PROGRESS11%TTD 478,500 to goTTD 71,500 of TTD 550,000",
  },
  "drawers": {
    "advisor_month_api": " Close★ In contention35%Advisor of the Month — APIRecognition + GiftCriteriaMonthly API35%TTD 17,500TTD 50,000Persistency0%0.0%90.0%Your paceYou're TTD 32,500 from qualifying. At your avg pace of TTD 8,750/wk, you'll qualify in ~4 wks (around Tue, 13 Oct 2026).Estimated — pending Tatil Life confirmation",
    "advisor_month_apps": " Close★ In contention0%Advisor of the Month — AppsRecognition + GiftCriteriaMonthly Apps0%015Persistency0%0.0%90.0%Your paceNo pace data yet — check back after your next submission.Estimated — pending Tatil Life confirmation",
    "agent_of_year": " Close★ In contention7%Agent of the YearAgent of the Year Trophy + Grand PrizeCriteriaAnnual API7%TTD 71,500TTD 1,000,000Annual Apps0%050Avg Persistency0%0.0%90.0%Your paceYou're TTD 928,500 from qualifying. At your avg pace of TTD 1,986.11/wk, you'll qualify in 20+ wks (around Tue, 4 Sept 2035).Estimated — pending Tatil Life confirmation",
    "bronze_club_l1": " Close★ In contention13%Bronze Club — Level 1Bronze Club Level 1 + TripCriteriaAnnual API ($450K–$549K)16%TTD 71,500TTD 450,000Annual Apps0%050Avg Persistency0%0.0%90.0%Your paceYou're TTD 378,500 from qualifying. At your avg pace of TTD 1,986.11/wk, you'll qualify in 20+ wks (around Tue, 14 May 2030).Estimated — pending Tatil Life confirmation",
    "bronze_club_l2": " Close★ In contention16%Bronze Club — Level 2Bronze Club Membership + BonusCriteriaAnnual API ($350K–$449K)20%TTD 71,500TTD 350,000Annual Apps0%050Avg Persistency0%0.0%90.0%Your paceYou're TTD 278,500 from qualifying. At your avg pace of TTD 1,986.11/wk, you'll qualify in 20+ wks (around Tue, 29 May 2029).Estimated — pending Tatil Life confirmation",
    "bronze_club_l3": " Close★ In contention20%Bronze Club — Level 3Bronze Club MembershipCriteriaAnnual API ($250K–$349K)29%TTD 71,500TTD 250,000Annual Apps0%050Avg Persistency0%0.0%90.0%Your paceYou're TTD 178,500 from qualifying. At your avg pace of TTD 1,986.11/wk, you'll qualify in 20+ wks (around Tue, 6 Jun 2028).Estimated — pending Tatil Life confirmation",
    "centurion": " Close★ In contention0%Centurion AwardCenturion TrophyCriteriaAnnual Apps0%0100Avg Persistency0%0.0%90.0%Your paceNo pace data yet — check back after your next submission.Estimated — pending Tatil Life confirmation",
    "gold_club": " Close★ In contention11%Gold ClubGold Club + Luxury TripCriteriaAnnual API (≥$650K)11%TTD 71,500TTD 650,000Annual Apps0%050Avg Persistency0%0.0%90.0%Your paceYou're TTD 578,500 from qualifying. At your avg pace of TTD 1,986.11/wk, you'll qualify in 20+ wks (around Tue, 20 Apr 2032).Estimated — pending Tatil Life confirmation",
    "mdrt": " Close★ In contention10%MDRTMDRT Membership + RecognitionCriteriaAnnual API10%TTD 71,500TTD 688,800Your paceYou're TTD 617,300 from qualifying. At your avg pace of TTD 1,986.11/wk, you'll qualify in 20+ wks (around Tue, 31 Aug 2032).Estimated — pending Tatil Life confirmation",
    "persistency_gold": " Close★ In contention29%Persistency Award — GoldGold Trophy + Premium BonusCriteriaAnnual API29%TTD 71,500TTD 250,000Annual Apps0%045Avg Persistency0%0.0%95.0%Your paceYou're TTD 178,500 from qualifying. At your avg pace of TTD 1,986.11/wk, you'll qualify in 20+ wks (around Tue, 6 Jun 2028).Estimated — pending Tatil Life confirmation",
    "persistency_silver": " Close★ In contention29%Persistency Award — SilverSilver Trophy + BonusCriteriaAnnual API29%TTD 71,500TTD 250,000Annual Apps0%045Avg Persistency0%0.0%92.0%Your paceYou're TTD 178,500 from qualifying. At your avg pace of TTD 1,986.11/wk, you'll qualify in 20+ wks (around Tue, 6 Jun 2028).Estimated — pending Tatil Life confirmation",
    "quarterly_api": " Close★ In contention42%Quarterly API AwardQuarterly BonusCriteriaQuarterly Net API42%TTD 52,500TTD 125,000Persistency0%0.0%90.0%Your paceYou're TTD 72,500 from qualifying. At your avg pace of TTD 5,250/wk, you'll qualify in ~14 wks (around Tue, 22 Dec 2026).Estimated — pending Tatil Life confirmation",
    "quarterly_apps": " Close★ In contention0%Quarterly Apps AwardQuarterly BonusCriteriaQuarterly Apps0%045Persistency0%0.0%90.0%Your paceNo pace data yet — check back after your next submission.Estimated — pending Tatil Life confirmation",
    "silver_club": " Close★ In contention11%Silver ClubSilver Club + Premium TripCriteriaAnnual API ($550K–$649K)13%TTD 71,500TTD 550,000Annual Apps0%050Avg Persistency0%0.0%90.0%Your paceYou're TTD 478,500 from qualifying. At your avg pace of TTD 1,986.11/wk, you'll qualify in 20+ wks (around Tue, 29 Apr 2031).Estimated — pending Tatil Life confirmation",
  },
  "groups": {
    "↗ Making progress · 30–70%": [
      "advisor_month_api",
      "quarterly_api",
    ],
    "◯ Just starting · under 30%": [
      "advisor_month_apps",
      "quarterly_apps",
      "persistency_silver",
      "persistency_gold",
      "centurion",
      "bronze_club_l3",
      "bronze_club_l2",
      "bronze_club_l1",
      "silver_club",
      "gold_club",
      "agent_of_year",
      "mdrt",
    ],
  },
  "hero": null,
  "ledgerPartial": null,
  "tracked": "14 awards tracked",
  "yearSettled": null,
}
`;

exports[`AgentAwardsPanel characterization (FR-5b commit 1) > (e) rookie profile (rookie_of_year and new_bs_award exist) 1`] = `
{
  "cards": {
    "advisor_month_api": "Advisor of the Month — APIRecognition + Gift60%60%TTD 20,000 to goTTD 30,000 of TTD 50,000",
    "advisor_month_apps": "Advisor of the Month — AppsRecognition + GiftIN PROGRESS13%13 to go2 of 15",
    "agent_of_year": "Agent of the YearAgent of the Year Trophy + Grand PrizeIN PROGRESS15%TTD 846,000 to goTTD 154,000 of TTD 1,000,000",
    "bronze_club_l1": "Bronze Club — Level 1Bronze Club Level 1 + TripIN PROGRESS28%TTD 296,000 to goTTD 154,000 of TTD 450,000",
    "bronze_club_l2": "Bronze Club — Level 2Bronze Club Membership + BonusIN PROGRESS34%TTD 196,000 to goTTD 154,000 of TTD 350,000",
    "bronze_club_l3": "Bronze Club — Level 3Bronze Club MembershipIN PROGRESS44%TTD 96,000 to goTTD 154,000 of TTD 250,000",
    "centurion": "Centurion AwardCenturion TrophyIN PROGRESS9%91 to go9 of 100",
    "gold_club": "Gold ClubGold Club + Luxury TripIN PROGRESS24%TTD 496,000 to goTTD 154,000 of TTD 650,000",
    "mdrt": "MDRTMDRT Membership + RecognitionIN PROGRESS22%TTD 534,800 to goTTD 154,000 of TTD 688,800",
    "new_bs_award": "New Business Advisor AwardNew Advisor Trophy + BonusIN PROGRESS62%TTD 96,000 to goTTD 154,000 of TTD 250,000",
    "persistency_gold": "Persistency Award — GoldGold Trophy + Premium Bonus62%62%TTD 96,000 to goTTD 154,000 of TTD 250,000",
    "persistency_silver": "Persistency Award — SilverSilver Trophy + BonusIN PROGRESS62%TTD 96,000 to goTTD 154,000 of TTD 250,000",
    "quarterly_api": "Quarterly API AwardQuarterly BonusQUALIFIED100%EarnedTTD 135,000 of TTD 125,000",
    "quarterly_apps": "Quarterly Apps AwardQuarterly BonusIN PROGRESS20%36 to go9 of 45",
    "rookie_of_year": "Rookie of the YearRookie Trophy + Premium RecognitionIN PROGRESS47%TTD 171,000 to goTTD 154,000 of TTD 325,000",
    "silver_club": "Silver ClubSilver Club + Premium TripIN PROGRESS24%TTD 396,000 to goTTD 154,000 of TTD 550,000",
  },
  "drawers": {
    "advisor_month_api": " Close★ In contention60%Advisor of the Month — APIRecognition + GiftCriteriaMonthly API60%TTD 30,000TTD 50,000Persistency100%91.0%90.0%Your paceYou're TTD 20,000 from qualifying. At your avg pace of TTD 15,000/wk, you'll qualify in ~2 wks (around Tue, 29 Sept 2026).",
    "advisor_month_apps": " Close★ In contention13%Advisor of the Month — AppsRecognition + GiftCriteriaMonthly Apps13%215Persistency100%91.0%90.0%Your paceYou're 13 apps from qualifying. At your avg pace of 1 apps/wk, you'll qualify in ~13 wks (around Tue, 15 Dec 2026).",
    "agent_of_year": " Close★ In contention15%Agent of the YearAgent of the Year Trophy + Grand PrizeCriteriaAnnual API15%TTD 154,000TTD 1,000,000Annual Apps18%950Avg Persistency100%90.3%90.0%Your paceYou're TTD 846,000 from qualifying. At your avg pace of TTD 4,277.78/wk, you'll qualify in 20+ wks (around Tue, 2 Jul 2030).Estimated — pending Tatil Life confirmation",
    "bronze_club_l1": " Close★ In contention28%Bronze Club — Level 1Bronze Club Level 1 + TripCriteriaAnnual API ($450K–$549K)34%TTD 154,000TTD 450,000Annual Apps18%950Avg Persistency100%90.3%90.0%Your paceYou're TTD 296,000 from qualifying. At your avg pace of TTD 4,277.78/wk, you'll qualify in 20+ wks (around Tue, 18 Jan 2028).Estimated — pending Tatil Life confirmation",
    "bronze_club_l2": " Close★ In contention34%Bronze Club — Level 2Bronze Club Membership + BonusCriteriaAnnual API ($350K–$449K)44%TTD 154,000TTD 350,000Annual Apps18%950Avg Persistency100%90.3%90.0%Your paceYou're TTD 196,000 from qualifying. At your avg pace of TTD 4,277.78/wk, you'll qualify in 20+ wks (around Tue, 3 Aug 2027).Estimated — pending Tatil Life confirmation",
    "bronze_club_l3": " Close★ In contention44%Bronze Club — Level 3Bronze Club MembershipCriteriaAnnual API ($250K–$349K)62%TTD 154,000TTD 250,000Annual Apps18%950Avg Persistency100%90.3%90.0%Your paceYou're TTD 96,000 from qualifying. At your avg pace of TTD 4,277.78/wk, you'll qualify in 20+ wks (around Tue, 23 Feb 2027).Estimated — pending Tatil Life confirmation",
    "centurion": " Close★ In contention9%Centurion AwardCenturion TrophyCriteriaAnnual Apps9%9100Avg Persistency100%90.3%90.0%Your paceYou're 91 apps from qualifying. At your avg pace of 0 apps/wk, you'll qualify in 20+ wks (around Tue, 6 Sept 2033).Estimated — pending Tatil Life confirmation",
    "gold_club": " Close★ In contention24%Gold ClubGold Club + Luxury TripCriteriaAnnual API (≥$650K)24%TTD 154,000TTD 650,000Annual Apps18%950Avg Persistency100%90.3%90.0%Your paceYou're TTD 496,000 from qualifying. At your avg pace of TTD 4,277.78/wk, you'll qualify in 20+ wks (around Tue, 5 Dec 2028).Estimated — pending Tatil Life confirmation",
    "mdrt": " Close★ In contention22%MDRTMDRT Membership + RecognitionCriteriaAnnual API22%TTD 154,000TTD 688,800Your paceYou're TTD 534,800 from qualifying. At your avg pace of TTD 4,277.78/wk, you'll qualify in 20+ wks (around Tue, 13 Feb 2029).Estimated — pending Tatil Life confirmation",
    "new_bs_award": " Close★ In contention62%New Business Advisor AwardNew Advisor Trophy + BonusCriteriaAnnual API62%TTD 154,000TTD 250,000Annual Apps17%952Avg Persistency95%90.3%95.0%Your paceYou're TTD 96,000 from qualifying. At your avg pace of TTD 4,277.78/wk, you'll qualify in 20+ wks (around Tue, 23 Feb 2027).Estimated — pending Tatil Life confirmation",
    "persistency_gold": " Close★ In contention62%Persistency Award — GoldGold Trophy + Premium BonusCriteriaAnnual API62%TTD 154,000TTD 250,000Annual Apps20%945Avg Persistency95%90.3%95.0%Your paceYou're TTD 96,000 from qualifying. At your avg pace of TTD 4,277.78/wk, you'll qualify in 20+ wks (around Tue, 23 Feb 2027).Estimated — pending Tatil Life confirmation",
    "persistency_silver": " Close★ In contention62%Persistency Award — SilverSilver Trophy + BonusCriteriaAnnual API62%TTD 154,000TTD 250,000Annual Apps20%945Avg Persistency98%90.3%92.0%Your paceYou're TTD 96,000 from qualifying. At your avg pace of TTD 4,277.78/wk, you'll qualify in 20+ wks (around Tue, 23 Feb 2027).Estimated — pending Tatil Life confirmation",
    "quarterly_api": " Close✓ Qualified100%Quarterly API AwardQuarterly BonusCriteriaQuarterly Net API100%TTD 135,000TTD 125,000Persistency100%90.3%90.0%",
    "quarterly_apps": " Close★ In contention20%Quarterly Apps AwardQuarterly BonusCriteriaQuarterly Apps20%945Persistency100%90.3%90.0%Your paceYou're 36 apps from qualifying. At your avg pace of 1 apps/wk, you'll qualify in 20+ wks (around Tue, 22 Jun 2027).",
    "rookie_of_year": " Close★ In contention47%Rookie of the YearRookie Trophy + Premium RecognitionCriteriaAnnual API47%TTD 154,000TTD 325,000Annual Apps17%952Avg Persistency95%90.3%95.0%Your paceYou're TTD 171,000 from qualifying. At your avg pace of TTD 4,277.78/wk, you'll qualify in 20+ wks (around Tue, 22 Jun 2027).Estimated — pending Tatil Life confirmation",
    "silver_club": " Close★ In contention24%Silver ClubSilver Club + Premium TripCriteriaAnnual API ($550K–$649K)28%TTD 154,000TTD 550,000Annual Apps18%950Avg Persistency100%90.3%90.0%Your paceYou're TTD 396,000 from qualifying. At your avg pace of TTD 4,277.78/wk, you'll qualify in 20+ wks (around Tue, 27 Jun 2028).Estimated — pending Tatil Life confirmation",
  },
  "groups": {
    "↗ Making progress · 30–70%": [
      "advisor_month_api",
      "persistency_gold",
      "persistency_silver",
      "rookie_of_year",
      "new_bs_award",
      "bronze_club_l3",
      "bronze_club_l2",
    ],
    "◯ Just starting · under 30%": [
      "advisor_month_apps",
      "quarterly_apps",
      "centurion",
      "bronze_club_l1",
      "silver_club",
      "gold_club",
      "agent_of_year",
      "mdrt",
    ],
    "✓ Qualified": [
      "quarterly_api",
    ],
  },
  "hero": "62%★ Almost therePersistency Award — GoldGold Trophy + Premium BonusGapTTD 96,000to qualify20+ wks at your current pace · avg TTD 4,277.78/wk",
  "ledgerPartial": null,
  "tracked": "16 awards tracked",
  "yearSettled": null,
}
`;

exports[`AgentAwardsPanel characterization (FR-5b commit 1) > (f) ledger load failure: partial notice + Retry re-reads the ledger > after Retry 1`] = `
{
  "cards": {
    "advisor_month_api": "Advisor of the Month — APIRecognition + GiftQUALIFIED100%EarnedTTD 52,000 of TTD 50,000",
    "advisor_month_apps": "Advisor of the Month — AppsRecognition + GiftIN PROGRESS7%14 to go1 of 15",
    "agent_of_year": "Agent of the YearAgent of the Year Trophy + Grand PrizeIN PROGRESS15%TTD 847,500 to goTTD 152,500 of TTD 1,000,000",
    "bronze_club_l1": "Bronze Club — Level 1Bronze Club Level 1 + TripIN PROGRESS28%TTD 297,500 to goTTD 152,500 of TTD 450,000",
    "bronze_club_l2": "Bronze Club — Level 2Bronze Club Membership + BonusIN PROGRESS34%TTD 197,500 to goTTD 152,500 of TTD 350,000",
    "bronze_club_l3": "Bronze Club — Level 3Bronze Club MembershipIN PROGRESS44%TTD 97,500 to goTTD 152,500 of TTD 250,000",
    "centurion": "Centurion AwardCenturion TrophyIN PROGRESS4%96 to go4 of 100",
    "gold_club": "Gold ClubGold Club + Luxury TripIN PROGRESS23%TTD 497,500 to goTTD 152,500 of TTD 650,000",
    "mdrt": "MDRTMDRT Membership + RecognitionIN PROGRESS24%TTD 524,300 to goTTD 164,500 of TTD 688,800",
    "persistency_gold": "Persistency Award — GoldGold Trophy + Premium Bonus61%61%TTD 97,500 to goTTD 152,500 of TTD 250,000",
    "persistency_silver": "Persistency Award — SilverSilver Trophy + BonusIN PROGRESS61%TTD 97,500 to goTTD 152,500 of TTD 250,000",
    "quarterly_api": "Quarterly API AwardQuarterly BonusQUALIFIED100%EarnedTTD 133,500 of TTD 125,000",
    "quarterly_apps": "Quarterly Apps AwardQuarterly BonusIN PROGRESS9%41 to go4 of 45",
    "silver_club": "Silver ClubSilver Club + Premium TripIN PROGRESS23%TTD 397,500 to goTTD 152,500 of TTD 550,000",
  },
  "drawers": {
    "advisor_month_api": " Close✓ Qualified100%Advisor of the Month — APIRecognition + GiftCriteriaMonthly API100%TTD 52,000TTD 50,000Persistency100%91.0%90.0%",
    "advisor_month_apps": " Close★ In contention7%Advisor of the Month — AppsRecognition + GiftCriteriaMonthly Apps7%115Persistency100%91.0%90.0%Your paceYou're 14 apps from qualifying. At your avg pace of 1 apps/wk, you'll qualify in 20+ wks (around Tue, 30 Mar 2027).",
    "agent_of_year": " Close★ In contention15%Agent of the YearAgent of the Year Trophy + Grand PrizeCriteriaAnnual API15%TTD 152,500TTD 1,000,000Annual Apps8%450Avg Persistency100%90.3%90.0%Your paceYou're TTD 847,500 from qualifying. At your avg pace of TTD 4,236.11/wk, you'll qualify in 20+ wks (around Tue, 23 Jul 2030).Estimated — pending Tatil Life confirmation",
    "bronze_club_l1": " Close★ In contention28%Bronze Club — Level 1Bronze Club Level 1 + TripCriteriaAnnual API ($450K–$549K)34%TTD 152,500TTD 450,000Annual Apps8%450Avg Persistency100%90.3%90.0%Your paceYou're TTD 297,500 from qualifying. At your avg pace of TTD 4,236.11/wk, you'll qualify in 20+ wks (around Tue, 25 Jan 2028).Estimated — pending Tatil Life confirmation",
    "bronze_club_l2": " Close★ In contention34%Bronze Club — Level 2Bronze Club Membership + BonusCriteriaAnnual API ($350K–$449K)44%TTD 152,500TTD 350,000Annual Apps8%450Avg Persistency100%90.3%90.0%Your paceYou're TTD 197,500 from qualifying. At your avg pace of TTD 4,236.11/wk, you'll qualify in 20+ wks (around Tue, 10 Aug 2027).Estimated — pending Tatil Life confirmation",
    "bronze_club_l3": " Close★ In contention44%Bronze Club — Level 3Bronze Club MembershipCriteriaAnnual API ($250K–$349K)61%TTD 152,500TTD 250,000Annual Apps8%450Avg Persistency100%90.3%90.0%Your paceYou're TTD 97,500 from qualifying. At your avg pace of TTD 4,236.11/wk, you'll qualify in 20+ wks (around Tue, 2 Mar 2027).Estimated — pending Tatil Life confirmation",
    "centurion": " Close★ In contention4%Centurion AwardCenturion TrophyCriteriaAnnual Apps4%4100Avg Persistency100%90.3%90.0%Your paceYou're 96 apps from qualifying. At your avg pace of 0 apps/wk, you'll qualify in 20+ wks (around Tue, 7 Apr 2043).Estimated — pending Tatil Life confirmation",
    "gold_club": " Close★ In contention23%Gold ClubGold Club + Luxury TripCriteriaAnnual API (≥$650K)23%TTD 152,500TTD 650,000Annual Apps8%450Avg Persistency100%90.3%90.0%Your paceYou're TTD 497,500 from qualifying. At your avg pace of TTD 4,236.11/wk, you'll qualify in 20+ wks (around Tue, 19 Dec 2028).Estimated — pending Tatil Life confirmation",
    "mdrt": " Close★ In contention24%MDRTMDRT Membership + RecognitionCriteriaAnnual API24%TTD 164,500TTD 688,800Your paceYou're TTD 524,300 from qualifying. At your avg pace of TTD 4,569.44/wk, you'll qualify in 20+ wks (around Tue, 28 Nov 2028).Estimated — pending Tatil Life confirmation",
    "persistency_gold": " Close★ In contention61%Persistency Award — GoldGold Trophy + Premium BonusCriteriaAnnual API61%TTD 152,500TTD 250,000Annual Apps9%445Avg Persistency95%90.3%95.0%Your paceYou're TTD 97,500 from qualifying. At your avg pace of TTD 4,236.11/wk, you'll qualify in 20+ wks (around Tue, 2 Mar 2027).Estimated — pending Tatil Life confirmation",
    "persistency_silver": " Close★ In contention61%Persistency Award — SilverSilver Trophy + BonusCriteriaAnnual API61%TTD 152,500TTD 250,000Annual Apps9%445Avg Persistency98%90.3%92.0%Your paceYou're TTD 97,500 from qualifying. At your avg pace of TTD 4,236.11/wk, you'll qualify in 20+ wks (around Tue, 2 Mar 2027).Estimated — pending Tatil Life confirmation",
    "quarterly_api": " Close✓ Qualified100%Quarterly API AwardQuarterly BonusCriteriaQuarterly Net API100%TTD 133,500TTD 125,000Persistency100%90.3%90.0%",
    "quarterly_apps": " Close★ In contention9%Quarterly Apps AwardQuarterly BonusCriteriaQuarterly Apps9%445Persistency100%90.3%90.0%Your paceYou're 41 apps from qualifying. At your avg pace of 0 apps/wk, you'll qualify in 20+ wks (around Tue, 5 Sept 2028).",
    "silver_club": " Close★ In contention23%Silver ClubSilver Club + Premium TripCriteriaAnnual API ($550K–$649K)28%TTD 152,500TTD 550,000Annual Apps8%450Avg Persistency100%90.3%90.0%Your paceYou're TTD 397,500 from qualifying. At your avg pace of TTD 4,236.11/wk, you'll qualify in 20+ wks (around Tue, 4 Jul 2028).Estimated — pending Tatil Life confirmation",
  },
  "groups": {
    "↗ Making progress · 30–70%": [
      "persistency_gold",
      "persistency_silver",
      "bronze_club_l3",
      "bronze_club_l2",
    ],
    "◯ Just starting · under 30%": [
      "advisor_month_apps",
      "quarterly_apps",
      "centurion",
      "bronze_club_l1",
      "silver_club",
      "gold_club",
      "agent_of_year",
      "mdrt",
    ],
    "✓ Qualified": [
      "advisor_month_api",
      "quarterly_api",
    ],
  },
  "hero": "61%★ Almost therePersistency Award — GoldGold Trophy + Premium BonusGapTTD 97,500to qualify20+ wks at your current pace · avg TTD 4,236.11/wk",
  "ledgerPartial": null,
  "tracked": "14 awards tracked",
  "yearSettled": "Settled 2026: TTD 145,500 · 0 from head office · 5 self-confirmed",
}
`;

exports[`AgentAwardsPanel characterization (FR-5b commit 1) > (f) ledger load failure: partial notice + Retry re-reads the ledger > after the failed read 1`] = `
{
  "cards": {
    "advisor_month_api": "Advisor of the Month — APIRecognition + Gift60%60%TTD 20,000 to goTTD 30,000 of TTD 50,000",
    "advisor_month_apps": "Advisor of the Month — AppsRecognition + GiftIN PROGRESS13%13 to go2 of 15",
    "agent_of_year": "Agent of the YearAgent of the Year Trophy + Grand PrizeIN PROGRESS15%TTD 846,000 to goTTD 154,000 of TTD 1,000,000",
    "bronze_club_l1": "Bronze Club — Level 1Bronze Club Level 1 + TripIN PROGRESS28%TTD 296,000 to goTTD 154,000 of TTD 450,000",
    "bronze_club_l2": "Bronze Club — Level 2Bronze Club Membership + BonusIN PROGRESS34%TTD 196,000 to goTTD 154,000 of TTD 350,000",
    "bronze_club_l3": "Bronze Club — Level 3Bronze Club MembershipIN PROGRESS44%TTD 96,000 to goTTD 154,000 of TTD 250,000",
    "centurion": "Centurion AwardCenturion TrophyIN PROGRESS9%91 to go9 of 100",
    "gold_club": "Gold ClubGold Club + Luxury TripIN PROGRESS24%TTD 496,000 to goTTD 154,000 of TTD 650,000",
    "mdrt": "MDRTMDRT Membership + RecognitionIN PROGRESS22%TTD 534,800 to goTTD 154,000 of TTD 688,800",
    "persistency_gold": "Persistency Award — GoldGold Trophy + Premium Bonus62%62%TTD 96,000 to goTTD 154,000 of TTD 250,000",
    "persistency_silver": "Persistency Award — SilverSilver Trophy + BonusIN PROGRESS62%TTD 96,000 to goTTD 154,000 of TTD 250,000",
    "quarterly_api": "Quarterly API AwardQuarterly BonusQUALIFIED100%EarnedTTD 135,000 of TTD 125,000",
    "quarterly_apps": "Quarterly Apps AwardQuarterly BonusIN PROGRESS20%36 to go9 of 45",
    "silver_club": "Silver ClubSilver Club + Premium TripIN PROGRESS24%TTD 396,000 to goTTD 154,000 of TTD 550,000",
  },
  "drawers": {
    "advisor_month_api": " Close★ In contention60%Advisor of the Month — APIRecognition + GiftCriteriaMonthly API60%TTD 30,000TTD 50,000Persistency100%91.0%90.0%Your paceYou're TTD 20,000 from qualifying. At your avg pace of TTD 15,000/wk, you'll qualify in ~2 wks (around Tue, 29 Sept 2026).",
    "advisor_month_apps": " Close★ In contention13%Advisor of the Month — AppsRecognition + GiftCriteriaMonthly Apps13%215Persistency100%91.0%90.0%Your paceYou're 13 apps from qualifying. At your avg pace of 1 apps/wk, you'll qualify in ~13 wks (around Tue, 15 Dec 2026).",
    "agent_of_year": " Close★ In contention15%Agent of the YearAgent of the Year Trophy + Grand PrizeCriteriaAnnual API15%TTD 154,000TTD 1,000,000Annual Apps18%950Avg Persistency100%90.3%90.0%Your paceYou're TTD 846,000 from qualifying. At your avg pace of TTD 4,277.78/wk, you'll qualify in 20+ wks (around Tue, 2 Jul 2030).Estimated — pending Tatil Life confirmation",
    "bronze_club_l1": " Close★ In contention28%Bronze Club — Level 1Bronze Club Level 1 + TripCriteriaAnnual API ($450K–$549K)34%TTD 154,000TTD 450,000Annual Apps18%950Avg Persistency100%90.3%90.0%Your paceYou're TTD 296,000 from qualifying. At your avg pace of TTD 4,277.78/wk, you'll qualify in 20+ wks (around Tue, 18 Jan 2028).Estimated — pending Tatil Life confirmation",
    "bronze_club_l2": " Close★ In contention34%Bronze Club — Level 2Bronze Club Membership + BonusCriteriaAnnual API ($350K–$449K)44%TTD 154,000TTD 350,000Annual Apps18%950Avg Persistency100%90.3%90.0%Your paceYou're TTD 196,000 from qualifying. At your avg pace of TTD 4,277.78/wk, you'll qualify in 20+ wks (around Tue, 3 Aug 2027).Estimated — pending Tatil Life confirmation",
    "bronze_club_l3": " Close★ In contention44%Bronze Club — Level 3Bronze Club MembershipCriteriaAnnual API ($250K–$349K)62%TTD 154,000TTD 250,000Annual Apps18%950Avg Persistency100%90.3%90.0%Your paceYou're TTD 96,000 from qualifying. At your avg pace of TTD 4,277.78/wk, you'll qualify in 20+ wks (around Tue, 23 Feb 2027).Estimated — pending Tatil Life confirmation",
    "centurion": " Close★ In contention9%Centurion AwardCenturion TrophyCriteriaAnnual Apps9%9100Avg Persistency100%90.3%90.0%Your paceYou're 91 apps from qualifying. At your avg pace of 0 apps/wk, you'll qualify in 20+ wks (around Tue, 6 Sept 2033).Estimated — pending Tatil Life confirmation",
    "gold_club": " Close★ In contention24%Gold ClubGold Club + Luxury TripCriteriaAnnual API (≥$650K)24%TTD 154,000TTD 650,000Annual Apps18%950Avg Persistency100%90.3%90.0%Your paceYou're TTD 496,000 from qualifying. At your avg pace of TTD 4,277.78/wk, you'll qualify in 20+ wks (around Tue, 5 Dec 2028).Estimated — pending Tatil Life confirmation",
    "mdrt": " Close★ In contention22%MDRTMDRT Membership + RecognitionCriteriaAnnual API22%TTD 154,000TTD 688,800Your paceYou're TTD 534,800 from qualifying. At your avg pace of TTD 4,277.78/wk, you'll qualify in 20+ wks (around Tue, 13 Feb 2029).Estimated — pending Tatil Life confirmation",
    "persistency_gold": " Close★ In contention62%Persistency Award — GoldGold Trophy + Premium BonusCriteriaAnnual API62%TTD 154,000TTD 250,000Annual Apps20%945Avg Persistency95%90.3%95.0%Your paceYou're TTD 96,000 from qualifying. At your avg pace of TTD 4,277.78/wk, you'll qualify in 20+ wks (around Tue, 23 Feb 2027).Estimated — pending Tatil Life confirmation",
    "persistency_silver": " Close★ In contention62%Persistency Award — SilverSilver Trophy + BonusCriteriaAnnual API62%TTD 154,000TTD 250,000Annual Apps20%945Avg Persistency98%90.3%92.0%Your paceYou're TTD 96,000 from qualifying. At your avg pace of TTD 4,277.78/wk, you'll qualify in 20+ wks (around Tue, 23 Feb 2027).Estimated — pending Tatil Life confirmation",
    "quarterly_api": " Close✓ Qualified100%Quarterly API AwardQuarterly BonusCriteriaQuarterly Net API100%TTD 135,000TTD 125,000Persistency100%90.3%90.0%",
    "quarterly_apps": " Close★ In contention20%Quarterly Apps AwardQuarterly BonusCriteriaQuarterly Apps20%945Persistency100%90.3%90.0%Your paceYou're 36 apps from qualifying. At your avg pace of 1 apps/wk, you'll qualify in 20+ wks (around Tue, 22 Jun 2027).",
    "silver_club": " Close★ In contention24%Silver ClubSilver Club + Premium TripCriteriaAnnual API ($550K–$649K)28%TTD 154,000TTD 550,000Annual Apps18%950Avg Persistency100%90.3%90.0%Your paceYou're TTD 396,000 from qualifying. At your avg pace of TTD 4,277.78/wk, you'll qualify in 20+ wks (around Tue, 27 Jun 2028).Estimated — pending Tatil Life confirmation",
  },
  "groups": {
    "↗ Making progress · 30–70%": [
      "advisor_month_api",
      "persistency_gold",
      "persistency_silver",
      "bronze_club_l3",
      "bronze_club_l2",
    ],
    "◯ Just starting · under 30%": [
      "advisor_month_apps",
      "quarterly_apps",
      "centurion",
      "bronze_club_l1",
      "silver_club",
      "gold_club",
      "agent_of_year",
      "mdrt",
    ],
    "✓ Qualified": [
      "quarterly_api",
    ],
  },
  "hero": "62%★ Almost therePersistency Award — GoldGold Trophy + Premium BonusGapTTD 96,000to qualify20+ wks at your current pace · avg TTD 4,277.78/wk",
  "ledgerPartial": "Your policy ledger data failed to load — awards may be incomplete.Retry",
  "tracked": "14 awards tracked",
  "yearSettled": null,
}
`;
